fix(security): 코드 리뷰 기반 보안 및 설정 개선
- JPA ddl-auto 프로파일 분리 (프로덕션: validate, 로컬: update)
- CORS 설정 환경변수화 (CORS_ALLOWED_ORIGINS)
- 로그아웃 API 토큰 유효성 검증 추가
- SQL 로깅 프로파일별 분리 (프로덕션: off, 로컬: on)
- Prometheus 엔드포인트 인증 필요하도록 변경
- 캐시 키에 memberId 포함하여 캐시 오염 방지

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>